Modified home page layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Home Page</h1>
+<div class = "home_callout text-center container-fluid">
+    <h1>Welcome to Wild Game Exchange</h1>
+    <h3>A membership site where Hunters can exchange meat with Non-Hunters.</h3>
+</div>
